Moved img and fonts folder into assets folder
And updated corresponding links

--- a/app/lib/ui/metapolator/app.less
+++ b/app/lib/ui/metapolator/app.less
@@ -18,21 +18,21 @@
 
 @font-face {
     font-family: 'icons';
-    src: url('fonts/mp_icons.otf');
+    src: url('assets/fonts/mp_icons.otf');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'seanSansNarrow';
-    src: url('fonts/SeanSans-NarrowBold.otf');
+    src: url('assets/fonts/SeanSans-NarrowBold.otf');
     font-weight: 700;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'seanSansNarrow';
-    src: url('fonts/SeanSans-NarrowThin.otf');
+    src: url('assets/fonts/SeanSans-NarrowThin.otf');
     font-weight: 100;
     font-style: normal;
 }
@@ -173,7 +173,7 @@ mtk-panel.without-body {
 .under-construction {
     display: block;
     height: 100%;
-    background-image: url('img/tile.png');
+    background-image: url('assets/img/tile.png');
     background-repeat: repeat;
     position: relative;
 }
