--- a/app/lib/ui/metapolator/design-space-panel/design-space-panel.less
+++ b/app/lib/ui/metapolator/design-space-panel/design-space-panel.less
@@ -42,7 +42,7 @@
 }
 
 .logo-bg {
-    background-image: url('img/metapolator-logo-white.svg');
+    background-image: url('assets/img/metapolator-logo-white.svg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: auto 80%; 
@@ -50,7 +50,7 @@
 
 .design-space {
     height: ~"calc(100% - 30px)";
-    background-image: url('img/tile.png');
+    background-image: url('assets/img/tile.png');
     background-repeat: repeat;
 }
 
