Fixed scaling problems glyph
On resize, the parent element of the svg needs to be set to 100%.

--- a/app/lib/ui/metapolator/glyph/glyph.less
+++ b/app/lib/ui/metapolator/glyph/glyph.less
@@ -3,3 +3,11 @@ mtk-glyph {
     box-sizing: content-box;
     display: block;
 }
+
+.list-mtk-glyph {
+    height: 100%;
+}
+
+mtk-glyph svg {
+    height: 100%;
+}
