--- a/app/lib/ui/metapolator/master-panel/master/master.less
+++ b/app/lib/ui/metapolator/master-panel/master/master.less
@@ -33,10 +33,12 @@ mtk-master div {
     list-style: outside none none;
     margin: 0;
     padding: 0;
+    height: 100%;
 }
 
 .list-view ul li {
-    display: inline;
+    display: inline-block;
+    height: 100%;
 }
 
 .list-edit {
