Make comments editable. Make a common 'commandHandler' for cps{rules|collections}

--- a/app/lib/ui/redPill/app.less
+++ b/app/lib/ui/redPill/app.less
@@ -212,7 +212,7 @@ mtk-cps-panel {
     }
 
     @line-height: 1.2em;
-    mtk-cps-property, mtk-cps-new-property, mtk-cps-selector-list {
+    mtk-cps-property, mtk-cps-new-property, mtk-cps-selector-list, mtk-cps-comment {
         line-height: @line-height; /* this is also hardcoded in the template of the textarea! */
         display: inline-block;
         border-bottom: 2px solid transparent;
