add mtk-cps-import-collection with interface to chose the file to import

--- a/app/lib/ui/redPill/app.less
+++ b/app/lib/ui/redPill/app.less
@@ -212,7 +212,8 @@ mtk-cps-panel {
     }
 
     @line-height: 1.2em;
-    mtk-cps-property, mtk-cps-new-property, mtk-cps-selector-list, mtk-cps-comment {
+    mtk-cps-property, mtk-cps-new-property, mtk-cps-selector-list,
+    mtk-cps-comment, mtk-cps-import-collection{
         line-height: @line-height; /* this is also hardcoded in the template of the textarea! */
         display: inline-block;
         border-bottom: 2px solid transparent;
