Toggle state of p/o panel via model, so we can collapse them from the app controller
changed some id’s to classes as well.

--- a/app/lib/ui/metapolator/parameter-panel/parameter-panel.less
+++ b/app/lib/ui/metapolator/parameter-panel/parameter-panel.less
@@ -9,7 +9,7 @@ mtk-selection {
     display: block;
 }
       
-#parameters-control-panel {
+.parameters-control-panel {
     display: block;
     position: fixed;
     z-index: 102;
@@ -29,14 +29,14 @@ mtk-selection {
     box-shadow: 3px 3px 3px rgba(0,0,0,0.5);
 }
 
-#control-panel-parameters {
+.control-panel-parameters {
     width: 65%;
     padding-right: 2px;
     display: inline-block;
     float: left;
 }       
 
-#control-panel-operators {
+.control-panel-operators {
     width: 35%;
     display: inline-block;
     float: left;
