--- a/app/lib/ui/metapolator/master-panel/master/master.less
+++ b/app/lib/ui/metapolator/master-panel/master/master.less
@@ -25,8 +25,10 @@ mtk-master div {
 
 .list-view.selected {
     background: @mtk-color-2;
-    // temp. apply this to svg later on
-    color: @mtk-color-1;
+}
+
+.list-view.selected svg {
+    fill: #fff;
 }
 
 .list-view ul {
