svg fill color instead of font color

--- a/app/lib/ui/metapolator/view-rubberband/view-rubberband.less
+++ b/app/lib/ui/metapolator/view-rubberband/view-rubberband.less
@@ -7,12 +7,16 @@
 
 li .list-view.temp-selected {
     background: @mtk-color-2;
-    // temp. apply this to svg later on
-    color: @mtk-color-1;
+}
+
+li .list-view.temp-selected svg {
+    fill: #fff;
 }
 
 li .list-view.temp-unselected {
     background: transparent;
-    // temp. apply this to svg later on
-    color: @mtk-color-2;
+}
+
+li .list-view.temp-unselected svg {
+    fill: @mtk-color-2;
 }
