--- a/app/lib/ui/redPill/app.less
+++ b/app/lib/ui/redPill/app.less
@@ -10,11 +10,12 @@
 html {
     font-family: monospace;
     background-color: @app-color;
-    overflow-y: scroll;
+    overflow-y: hidden;
+    height: 100%;
 }
 body {
     margin: 0;
-    padding: 0 3em;
+    padding: 0;
 }
 
 .compatibility-info {
@@ -37,8 +38,8 @@ body.dependencies-ready .compatibility-info{
 red-pill {
     display: none;
 }
-body.dependencies-ready red-pill{
-    display: block;
+body.dependencies-ready {
+    height: 100%;
 }
 
 red-pill label {
@@ -51,8 +52,6 @@ red-pill label select {
 
 red-pill {
     color: black;
-    border: @app-border;
-    padding: @app-gap;
     background: white;
 }
 
@@ -135,9 +134,20 @@ mtk-red-pill-glyphs li {
     vertical-align: top;
 }
 
-red-pill .children {
-    white-space: nowrap;
 
+
+red-pill {
+
+    height: 100%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+
+    > * {
+        flex-grow: 1;
+        flex-shrink: 1;
+        overflow: auto;
+    }
     mtk-text-editor{
         width: 450px;
     }
@@ -151,6 +161,19 @@ red-pill .children {
 
 mtk-cps-panel {
 
+    max-height: 100%;
+    height: 50%; /* todo: this should have a drag handle control */
+
+    flex-grow: 0;
+    flex-shrink: 0;
+
+    display: flex;
+    flex-direction: column;
+
+    > .draghandle {
+        cursor: ns-resize;
+    }
+
     /* used as drag indicator */
     indicator {
         display: block;
@@ -162,9 +185,10 @@ mtk-cps-panel {
 
     mtk-cps-collection.root {
         display: block;
+        flex-grow: 1;
+        flex-shrink: 1;
         overflow-y: scroll;
-        overflow-x: auto;
-        max-height: 300px;
+
     }
 
     mtk-cps-rule {
