--- a/app/lib/ui/redPill/app.less
+++ b/app/lib/ui/redPill/app.less
@@ -224,18 +224,26 @@ mtk-cps-panel {
 
     mtk-cps-comment {
         display: inline-block;
-        font-family: monospace;
+
+
         color: darkslategray;
         vertical-align: top;
         span {
             display: inline-block;
-            white-space: pre;
         }
-        span::before{
+        span.format-standard {
+            white-space: pre;
+            font-family: monospace;
+        }
+        span.format-standard::before{
             content: '/*';
         }
-        span::after{
+        span.format-standard::after{
             content: '*/';
+        }
+
+        span.format-markdown {
+            font-family: sans-serif;
         }
     }
 
