Html for parameter / operator panels

--- a/app/lib/ui/metapolator/parameter-panel/parameter-panel.less
+++ b/app/lib/ui/metapolator/parameter-panel/parameter-panel.less
@@ -16,7 +16,7 @@ mtk-selection {
     width: 200px;
     background: @mtk-color-1;
     padding: 8px;
-    box-shadow: 3px 3px 3px rgba(0,0,0,0.5);
+    box-shadow: 0 3px 3px rgba(0,0,0,0.5);
 } 
 
 .single-panel {
@@ -26,7 +26,7 @@ mtk-selection {
     width: 100px;
     background: @mtk-color-1;
     padding: 8px;
-    box-shadow: 3px 3px 3px rgba(0,0,0,0.5);
+    box-shadow: 0 3px 3px rgba(0,0,0,0.5);
 }
 
 .control-panel-parameters {
@@ -45,18 +45,6 @@ mtk-selection {
 .control-panel-operator {
     width: 100%;
     text-align: center;
-}
-
-.control-panel-button {
-    background: @mtk-color-2;
-    color: @mtk-color-1;
-    padding: 8px 8px 5px 8px;
-    margin-bottom: 2px; 
-    cursor: default;
-}
-
-.control-panel-button.selected, .control-panel-button.push-button-down {
-    background: @mtk-color-red;
 }
 
 .control-panel-cancel {
