--- a/app/lib/ui/metapolator/dialog/dialog.less
+++ b/app/lib/ui/metapolator/dialog/dialog.less
@@ -1,4 +1,4 @@
-#layover {
+.layover {
     display: none;
     position: fixed;
     z-index: 10000;
@@ -9,7 +9,7 @@
     top: 0;
 }
 
-#dialog {
+.dialog {
     position: fixed;
     z-index: 10001;
     top: 80px;
@@ -21,7 +21,7 @@
     left: ~"calc(50% - 200px)";
 }
 
-#dialog-close {
+.dialog-close {
     display: none;
     position: absolute;
     right: 10px;
@@ -34,37 +34,37 @@
     text-align: center;
 }
     
-#dialog-close:hover {
+.dialog-close:hover {
     color: #000;
 }
 
-#dialog-loading {
+.dialog-loading {
     text-align: center;
     display: none;
     padding-bottom: 40px;
 }
     
-#dialog-content {
+.dialog-content {
     font-size: 14px;
     line-height: 18px;
 }
     
-#dialog-content a {
+.dialog-content a {
     color: #F01616;
     text-decoration: none;
 }
         
-#dialog-content a:hover {
+.dialog-content a:hover {
     color: #F01616;
     text-decoration: underline;
 }
  
-#dialog-confirm {
+.dialog-confirm {
     margin-top: 30px;
     display: none;
 }
     
-#dialog-confirm button {
+.dialog-confirm button {
     font-size: 18px;
     border-radius: 16px;
     padding: 8px;
@@ -74,7 +74,7 @@
     margin-right: 8px;
 }
     
-#dialog-confirm button:hover {
+.dialog-confirm button:hover {
     background: #515151;
     color: #eee;
 }
