--- a/app/lib/ui/metapolator/app.less
+++ b/app/lib/ui/metapolator/app.less
@@ -12,7 +12,6 @@
 @import "rename/rename";
 @import "menubar/menubar";
 @import "view-rubberband/view-rubberband";
-@import "dialog/dialog";
 @import "divider/horizontal-divider/horizontal-divider";
 @import "divider/vertical-divider/vertical-divider";
 
@@ -191,4 +190,97 @@ mtk-panel.without-body {
 
 .standard-line-svg {
     stroke: @mtk-color-2;
+}
+
+// dialog screen
+
+.layover {
+    display: none;
+    position: fixed;
+    z-index: 10000;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.6);
+    left: 0;
+    top: 0;
+}
+
+.dialog {
+    position: fixed;
+    z-index: 10001;
+    top: 80px;
+    padding: 40px;
+    background: #fff;
+    box-shadow: 0 0 20px rgba(0,0,0,0.6);
+    width: 400px;
+    min-height: 100px;
+    left: ~"calc(50% - 200px)";
+}
+
+.dialog-close {
+    position: absolute;
+    right: 10px;
+    top: 16px;
+    width: 20px;
+    height: 20px;
+    font-size: 20px;
+    color: #515151;
+    cursor: pointer;
+    text-align: center;
+}
+
+.dialog-close:hover {
+    color: #000;
+}
+
+.dialog-loading {
+    text-align: center;
+    padding-bottom: 40px;
+}
+
+.dialog-content {
+    font-size: 14px;
+    line-height: 18px;
+}
+
+.dialog-content a {
+    color: #F01616;
+    text-decoration: none;
+}
+
+.dialog-content a:hover {
+    color: #F01616;
+    text-decoration: underline;
+}
+
+.dialog-confirm {
+    margin-top: 30px;
+}
+
+.dialog-confirm button {
+    font-size: 18px;
+    border-radius: 6px;
+    padding: 6px;
+    color: #fff;
+    margin-right: 8px;
+}
+
+.dialog-button-true {
+    background: #5cb85c;
+    border: 1px solid #4cae4c;
+}
+
+.dialog-button-true:hover {
+    background: #449d44;
+    border: 1px solid #398439;
+}
+
+.dialog-button-false {
+    background: #d9534f;
+    border: 1px solid #d43f3a;
+}
+
+.dialog-button-false:hover {
+    background: #c9302c;
+    border: 1px solid #ac2925;
 }
