Add initial mtk-cps-style-dict. Select the file to show with mtk-cps-collection.root via dropdown.
TODO:(for mtk-cps-style-dict)

 * The "shadowed" rules are only correctly marked upon initialization
   of the mtk-cps-style-dict but not updated when rules change. It should
   happen instantly when a property changes; as the rendering of the
   glyphs change, when the property us being edited.
 * The rules need more context, namely: we only display the rules own
   selectorList at the moment, but in here the surrounding atNamespaces
   are interesting as well. Also the file, where the rule was defined
   is interesting, this could be used as a link to the cps-collection
   interface. Since we have atImport the context can vary, even if we
   know how the rule was defined in its source-file. Thus, it would be
   helpful to have access to the complete selector that selected the
   rule. Maybe we can start with something simple, and keep in minf that
   we could provide more information here.
 * A bit more styling would be nice e.g. need some space to left border.
 * Nice to have would be a "element.style" like construct, for easily
   adding rules to the selected item (as done in FireBug)
 * Maybe, display many StyleDicts by employing `queryAll` instead of
   `query` this was intentionally left out now.
 * When all this is done, selecting elements graphically by clicking on
   a rendering would be killer (and the end of the initial cps-panel
   development phase)

--- a/app/lib/ui/redPill/app.less
+++ b/app/lib/ui/redPill/app.less
@@ -183,12 +183,18 @@ mtk-cps-panel {
         z-index: 10;
     }
 
-    mtk-cps-collection.root {
+    mtk-cps-collection.root,
+    mtk-cps-style-dict {
         display: block;
         flex-grow: 1;
         flex-shrink: 1;
         overflow-y: scroll;
+    }
 
+
+    mtk-cps-style {
+        display: block;
+        background: red;
     }
 
     mtk-cps-rule {
@@ -313,6 +319,18 @@ mtk-cps-panel {
             cursor: help;
         }
     }
+
+    /**
+     * These properties are defined but more specific properties are used
+     */
+    mtk-cps-property.shadowed {
+        span.property-name,
+        span.property-value {
+            color: gray;
+            text-decoration: line-through;
+        }
+    }
+
     mtk-cps-new-item{
         display: block;
     }
