updating instance export code to newest version.

--- a/app/lib/ui/metapolator/metadata-panel/metadata-panel.less
+++ b/app/lib/ui/metapolator/metadata-panel/metadata-panel.less
@@ -9,18 +9,23 @@ mtk-metadata-panel .under-construction {
     position: relative;
 }
 
-#progress-bar {
+#progressbar {
     background: #c9eac8;
     height: 100%;
     width: 0;
 }
 
-#progress-bar-label {
+#progresslabel {
     position: absolute;
-    left: 5px;
-    top: 13px;
+    top: 12px;
+    left: 12px;
+    color: #000;
 }
 
-#progress-bar-blob-download {
-    display: none;
+#blob_download {
+    position: absolute;
+    top: 12px;
+    left: 12px;
+    color: #000;
 }
+
