Set fallback value and less disruptive error indication.

--- a/app/lib/ui/metapolator/parameter-panel/selection/selection-parameter/selection-parameter.less
+++ b/app/lib/ui/metapolator/parameter-panel/selection/selection-parameter/selection-parameter.less
@@ -85,3 +85,7 @@
 .control-panel-button.selected, .control-panel-button.push-button-down {
     background: @mtk-color-red;
 }
+
+input.error {
+    color: #a82422;
+}
