show path/trace of a rule in styleDict interface

--- a/app/lib/ui/redPill/app.less
+++ b/app/lib/ui/redPill/app.less
@@ -203,7 +203,9 @@ mtk-cps-panel {
 
 
     mtk-cps-property-dict::before {
-        content: '{'
+        content: '{';
+        vertical-align: bottom;
+
     }
     mtk-cps-property-dict::after {
         content: '}';
