hide splashscreen via already existing class adding

--- a/app/lib/ui/metapolator/app.less
+++ b/app/lib/ui/metapolator/app.less
@@ -303,6 +303,10 @@ mtk-panel.without-body {
     padding: 40px 40px 100px 40px;
 }
 
+.dependencies-ready #splashscreen {
+    display: none;
+}
+
 #splash-left {
     width: 30%;
     float: left;
