added social media stuff and meta tags

--- a/app/lib/ui/metapolator/app.less
+++ b/app/lib/ui/metapolator/app.less
@@ -340,3 +340,13 @@ mtk-panel.without-body {
 #splash-right p + p {
     margin-top: 10px;
 }
+
+// social media
+
+.bottom-text {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 16px;
+    color: #515151;
+}
