Speed up landscape transition and add easing in and out.

--- a/app/lib/ui/metapolator/app.less
+++ b/app/lib/ui/metapolator/app.less
@@ -130,7 +130,7 @@ mtk-landscape {
 }
 
 .transition {
-    transition: left 700ms ease 0s; 
+    transition: left 450ms cubic-bezier(0.5, 0, 0.5, 1) 0s;
 }
 
 mtk-panel {
