make markers.svg available for static build

--- a/app/lib/ui/redPill/app.less
+++ b/app/lib/ui/redPill/app.less
@@ -123,7 +123,7 @@ mtk-red-pill-glyph {
 
         use.type-contour,
         use.type-penstroke {
-            marker-start: url('markers.svg#direction-indicator');
+            marker-start: url('assets/markers.svg#direction-indicator');
         }
 
         use {
