--- a/v0.3.0/min/main.css
+++ b/v0.3.0/min/main.css
@@ -51,7 +51,7 @@
   line-height: 1em;
 }
 .operator-value input.range-input {
-  width: 40px;
+  width: 30px;
 }
 .range-left {
   text-align: right;
@@ -1006,7 +1006,7 @@ html {
   font-family: "seanSansNarrow";
   font-weight: 700;
   font-size: 12px;
-  line-height: 12px;
+  line-height: 15px;
   color: #515151;
 }
 .inactive {
@@ -1020,7 +1020,8 @@ body {
   margin: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow: auto;
+  min-width: 960px;
 }
 .unselectable {
   -webkit-touch-callout: none;
@@ -1065,7 +1066,7 @@ mtk-landscape {
   top: 0;
 }
 .transition {
-  transition: left 700ms ease 0s;
+  transition: left 450ms cubic-bezier(0.5, 0, 0.5, 1) 0s;
 }
 mtk-panel {
   vertical-align: top;
@@ -1191,4 +1192,54 @@ mtk-panel.without-body {
 .dialog-button-false:hover {
   background: #c9302c;
   border: 1px solid #ac2925;
+}
+#splashscreen {
+  display: block;
+  position: fixed;
+  border-radius: 6px;
+  z-index: 1001;
+  left: calc(50% - 400px);
+  top: 50px;
+  width: 800px;
+  background: #fff;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.8);
+  font-size: 14px;
+  padding: 40px 40px 100px 40px;
+}
+.dependencies-ready #splashscreen {
+  display: none;
+}
+#splash-left {
+  width: 30%;
+  float: left;
+}
+#splash-logo {
+  width: 130px;
+  display: block;
+  height: auto;
+}
+#splash-right {
+  width: 70%;
+  float: left;
+}
+#splash-right h1 {
+  font-size: 32px;
+  margin-bottom: 0;
+}
+#splash-right h2 {
+  font-weight: 100;
+  font-size: 22px;
+}
+#splash-right p {
+  margin-top: 50px;
+}
+#splash-right p + p {
+  margin-top: 10px;
+}
+.bottom-text {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 16px;
+  color: #515151;
 }
