update deployment after fix of #693 and #458

--- a/v0.3.0/max/main.css
+++ b/v0.3.0/max/main.css
@@ -165,7 +165,7 @@ mtk-specimen-samples input {
   width: 30px;
 }
 .templayer {
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   width: 100%;
